--- a/www/css/index.css
+++ b/www/css/index.css
@@ -29,12 +29,7 @@ body {
     /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;
     /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color: #E4E4E4;
-    background-image: linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image: -webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image: -ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0, #A7A7A7), color-stop(0.51, #E4E4E4));
-    background-attachment: fixed;
+    background: linear-gradient(bottom, black, white);
     font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size: 12px;
     height: 100%;
@@ -52,7 +47,7 @@ body {
     /* position in the center of the screen */
     left: 50%;
     top: 20%;
-    height: 50px;
+    height: 100px;
     /* text area height */
     width: 225px;
     /* text area width */
@@ -62,6 +57,24 @@ body {
     margin: -115px 0px 0px -112px;
     /* offset vertical: half of image height and text area height */
     /* offset horizontal: half of text area width */
+}
+
+#foto {
+    min-height: 70%;
+}
+
+#botones {
+    display: inline;
+    width: 100%;
+    height: 30%;
+}
+
+button {
+    color: white;
+    background-color: #ec0006;
+    width: 45%;
+    min-height: 55px;
+    border-radius: 38px 38px 38px 38px;
 }
 
 
